Name:   getemx
Version:        0.1
Description:    Read emusic's .emx files and download media
License:        GPL
License-File:   LICENSE
Author:         Ben Wolfson
Maintainer:     wolfson@gmail.com
Build-Type:     Simple
Cabal-Version:  >=1.2
extra-source-files: README.rst
Executable getemx
           Main-is:     getemx.hs
           Build-Depends:       base >= 3 && < 5, curl >= 1.3, hxt >= 9, mtl >= 1, filepath >= 1, directory >= 1, process >= 1, old-locale >= 1, time >= 1, haskell98
